fixed back button alignment

--- a/web/src/main/webapp/assets/mobile/o2/css/mobile.css
+++ b/web/src/main/webapp/assets/mobile/o2/css/mobile.css
@@ -263,8 +263,8 @@ input.accounts{
 	padding-left: 25px;
 	padding-right: 10px;
 	line-height: 25px;
-	padding-top: 0px;
-	padding-bottom: 3px;
+	padding-top: 3px;
+	padding-bottom: 4px;
 	border: 1px solid #000000;
 }
 .buttonBox  {
